<resources>
    <string name="app_name">Testing tests</string>
    <string name="action_settings">Settings</string>
    <string name="mixed_text_scaling">Mixed text scaling</string>
    <string name="snackbar_test">Snackbar test</string>
    <string name="databinding_only_text_scaling">Databinding only text scaling</string>
    <string name="biometric_prompt">Biometric Prompt</string>
    <string name="network_request_builder">Network request builder</string>
    <string name="fullscreen_webview_video">Fullscreen WebView Video</string>

    <string name="messageConnected">Connected</string>
    <string name="messageDisconnected">Disconnected</string>
    <string name="messageDisconnecting">Losing connection</string>
    <string name="follow_system_setting">Follow system setting</string>
    <string name="force_light_mode">Force Light Mode</string>
    <string name="force_dark_mode">Force Dark Mode</string>
    <string name="apply_restart"><![CDATA[Apply & restart]]></string>
    <string name="night_mode_title">Night mode</string>
    <string name="theme_label">Theme</string>
    <string name="context_label">Context</string>
    <string name="activity_label">Activity</string>
    <string name="application_label">Application</string>
    <string name="sample_content_description">Sample image</string>
    <string name="add_fragment">Add fragment</string>
    <string name="close_fragment">Close Fragment</string>
    <string name="night_mode">Night Mode</string>
    <string name="fragment_lifecycle">Fragment lifecycle</string>
    <string name="lce">LCE</string>
    <string name="contracts">Activity Results Contracts</string>
    <string name="intent_sender">Intent Sender</string>
    <string name="task_affinity">Task Affinity</string>
    <string name="network_testing">Network Testing</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
