<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".MainActivity"
        tools:showIn="@layout/activity_main">

    <Button
            android:id="@+id/snackbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/snackbar_test"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <Button
            android:id="@+id/mixedTextScaling"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/mixed_text_scaling"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/snackbar" />

    <Button
            android:id="@+id/dataBindingOnlyTextScaling"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/databinding_only_text_scaling"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mixedTextScaling" />

    <Button
            android:id="@+id/biometricPrompt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/biometric_prompt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dataBindingOnlyTextScaling" />

    <Button
            android:id="@+id/networkRequestBuilder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/network_request_builder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/biometricPrompt" />

    <Button
            android:id="@+id/fullscreenWebViewVideo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/fullscreen_webview_video"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/networkRequestBuilder" />


</androidx.constraintlayout.widget.ConstraintLayout>